@@ -1,3 +1,3 @@
 module RailsWizard
-  VERSION = "1.0.9"
+  VERSION = "1.0.10"
 end
